--- a/springboot_demo3/pom.xml
+++ b/springboot_demo3/pom.xml
@@ -8,10 +8,12 @@
         <version>2.4.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.cgb</groupId>
-    <artifactId>springboot_demo2</artifactId>
+    <groupId>com.jt</groupId>
+    <artifactId>springboot_demo3</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot_demo2</name>
+    <name>springboot_demo3</name>
+    <!--定义项目打包方式-->
+    <packaging>war</packaging>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
@@ -45,6 +47,30 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.2</version>
+        </dependency>
+        <!--springBoot整合JSP添加依赖  -->
+        <!--servlet依赖 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+
+        <!--jstl依赖 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+
+        <!--使jsp页面生效 -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
