--- a/jt/jt_manage/pom.xml
+++ b/jt/jt_manage/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>jt_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>3.4.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
